--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -4,10 +4,64 @@
 <div class="col m10">
     <div class="row detaildescrip" style="margin-top:8px;">
         <div class="col m12">
-            <input type="text" edit-dir="" placeholder="Scenarionaam" ng-model="scd.scenarioName" ng-change="scd.updatename(scd.uid, scd.scenarioName)" style="margin-top:-10px;margin-bottom:0;"/>
+            <input type="text" edit-dir="" placeholder="Scenarionaam" ng-model="sdc.scenarioName" ng-change="sdc.updatename(sdc.uid, sdc.scenarioName)" style="margin-top:-10px;margin-bottom:0;"/>
         </div>
         <div class="col m12">
-            <input type="text" edit-dir="" placeholder="" ng-model="scd.scenarioDescription" ng-change="scd.updateDescription(scd.uid, scd.scenarioDescription)" style="margin-top:-10px; margin-bottom:0;">
+            <input type="text" edit-dir="" placeholder="" ng-model="sdc.scenarioDescription" ng-change="sdc.updateDescription(sdc.uid, sdc.scenarioDescription)" style="margin-top:-10px; margin-bottom:0;">
+        </div>
+    </div>
+</div>
+
+<div style="overflow-y: scroll; height: 265px; width:100%;">
+    <div class="row"
+         style="padding-top:5px; height: 57px; margin-bottom: 8px; margin-top:8px; border-bottom:1px solid #EEEEEE"
+         ng-repeat="actuator in sdc.devices">
+        <div class="col m3">
+            <span class="col m3">{{actuator.config.alias}}</span>
+        </div>
+        <div class="col m5">
+            <select id="{{actuator.id}}" style="display: block;">
+                <option value="">Actie</option>
+                <option ng-repeat="command in actuator.model.commands" data-value="{{ {deviceid: actuator.id, command: command} }}">{{command.name}}</option>
+            </select>
+        </div>
+    </div>
+</div>
+
+<div id="actuatorscenario" class="modal" style="margin-top:-25px;">
+    <div class="modal-content">
+        <h4 id="commandTitle">Apparaat toevoegen</h4>
+
+        <div class="modalWrapper">
+            <div class="actuator">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide" ng-repeat="repeat in snc.repeater">
+                            <div class="col m6 repeater"
+                                 ng-if="$index >= ($parent.$index * 6) && $index < (($parent.$index+1) * 6)"
+                                 ng-repeat="actuator in snc.actuators">
+                                <div class="row" style="margin-bottom:10px">
+                                    <div class="col m8" ng-click="snc.select(actuator)"
+                                         style="margin-left:-8px; margin-top:0px;">
+                                        <div class="customCard" style="padding:1px;">
+                                            <div class="detailcontainer">
+                                                {{actuator.name}}<br>
+                                                <span class="description">{{actuator.description.substring(0, 25)}}...</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div style="left:285px; width: 12%; position: absolute; bottom:30px;">
+                    <div class="swiper-pagination">
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
