--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -30,7 +30,7 @@
             <span class="col m3">{{actuator.config.alias}}</span>
         </div>
         <div class="col m5">
-            <select id="{{actuator.id}}" style="display: block;">
+            <select id="{{actuator.id}}" ng-model="actuatorValue" ng-change="sdc.updateActuator(actuator.id)" style="display: block;">
                 <option ng-repeat="command in actuator.model.commands" ng-selected="sdc.scenario.actuators[sdc.devices.indexOf(actuator)].action.command === command.name" data-value="{{ {deviceid: actuator.id, command: command} }}">
                     {{command.name}}
                 </option>
