--- a/public/components/ruleEngine/ruleEngine.detail.html
+++ b/public/components/ruleEngine/ruleEngine.detail.html
@@ -20,12 +20,14 @@
             </div>
         </div>
         <div class="row" style="margin-bottom: 0px;">
-            <div class="col m12 card touch" style="width:40px; padding-left:7px;" ng-click="rec.openModal('eventModal')">
+            <div class="col m12 card touch" style="width:40px; padding-left:7px;"
+                 ng-click="rec.openModal('eventModal')">
                 <div style="margin-top:5px; background-image:url('https://cdn3.iconfinder.com/data/icons/time/100/alarm_bell_1-512.png'); width: 25px; height:30px;background-repeat:no-repeat; background-size:contain;"></div>
             </div>
         </div>
         <div class="row" style="margin-bottom: 0px;">
-            <div class="col m12 card touch" style="width:40px; padding-left:7px;" ng-click="rec.openModal('timerModal')">
+            <div class="col m12 card touch" style="width:40px; padding-left:7px;"
+                 ng-click="rec.openModal('timerModal')">
                 <div style="margin-top:5px; background-image:url('http://simpleicon.com/wp-content/uploads/clock-time-1.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
             </div>
         </div>
@@ -33,7 +35,7 @@
     <div class="col m11" style="padding-left:0px; margin-top:5px;">
         <div class="row">
             <div class="col m12" style="padding-left:0px;">
-                <div ng-repeat="rule in rec.ruleObjects[rec.selectedCommand].thresholds track by $index"  class="col m6">
+                <div ng-repeat="rule in rec.ruleObjects[rec.selectedCommand].thresholds track by $index" class="col m6">
                     <div ng-click="rec.showDetail(rule)" class="touch card" style="padding:5px; height: 25px;">
                         {{rule.device}} - {{rule.name}}
                         <div style="position: absolute; right:0px; width: 25px; height: 26px; padding-top:2px; margin-top:-27px; text-align: center; background-color: #F84E19">
@@ -41,11 +43,23 @@
                         </div>
                     </div>
                 </div>
-                <div ng-repeat="rule in rec.ruleObjects[rec.selectedCommand].events track by $index"  class="col m6">
+
+                <div ng-repeat="rule in rec.ruleObjects[rec.selectedCommand].events track by $index" class="col m6">
                     <div ng-click="rec.showDetailEvent(rule)" class="touch card" style="padding:5px; height: 25px;">
                         {{rec.getActuatorById(rule.device).config.alias}} - {{rule.event}}
                         <div style="position: absolute; right:0px; width: 25px; height: 26px; margin-top:-27px; text-align: center; padding-top:2px; background-color: #F84E19">
-                            <img src="https://cdn3.iconfinder.com/data/icons/time/100/alarm_bell_1-512.png" class="invert" width="80%">
+                            <img src="https://cdn3.iconfinder.com/data/icons/time/100/alarm_bell_1-512.png"
+                                 class="invert" width="80%">
+                        </div>
+                    </div>
+                </div>
+
+                <div ng-repeat="rule in rec.ruleObjects[rec.selectedCommand].timers track by $index" class="col m6">
+                    <div ng-click="rec.showDetailTimer(rule)" class="touch card" style="padding:5px; height: 25px;">
+                        {{rule.name}} - {{rule.time}}
+                        <div style="position: absolute; right:0px; width: 25px; height: 26px; margin-top:-27px; text-align: center; padding-top:2px; background-color: #F84E19">
+                            <img src="http://simpleicon.com/wp-content/uploads/clock-time-1.png" class="invert"
+                                 width="80%">
                         </div>
                     </div>
                 </div>
@@ -180,14 +194,24 @@
                 <input ng-model="rec.threshold.value" edit-dir placeholder="Waarde" id="value" type="text">
             </div>
             <!--<div class="col m1">-->
-                <!--<div style="width: 100%; height: 45px; color:white; border-radius: 2px; text-align: center; font-size:24px; font-weight: 100; padding-top:4px; cursor:pointer; background-color: #F84E19;"-->
-                     <!--ng-click="rec.addToThresholds()"> +-->
-                <!--</div>-->
+            <!--<div style="width: 100%; height: 45px; color:white; border-radius: 2px; text-align: center; font-size:24px; font-weight: 100; padding-top:4px; cursor:pointer; background-color: #F84E19;"-->
+            <!--ng-click="rec.addToThresholds()"> +-->
+            <!--</div>-->
             <!--</div>-->
         </div>
     </div>
     <div class="modal-footer">
-        <a ng-click="rec.closeModal('ruleModal'); rec.addToThresholds()" class="modal-action modal-close waves-effect waves-green btn-flat ">Bewaren</a>
+        <div class="row">
+            <div class="col m3">
+                <a ng-if="rec.rule.name" ng-click="rec.remove('thresholds', rec.threshold.id, 'ruleModal')"
+                   class="modal-action modal-close waves-effect waves-green btn-flat ">Verwijderen</a>
+                <div style="width: 10px; height: 5px;"></div>
+            </div>
+            <div class="col m3 offset-m6">
+                <a ng-click="rec.closeModal('ruleModal'); rec.addToThresholds()"
+                   class="modal-action modal-close waves-effect waves-green btn-flat ">Bewaren</a>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -204,13 +228,15 @@
             <div class="col m3" style="margin-top:15px;">
                 <select ng-model="rec.event.device" style="display: block;" ng-change="rec.updateEventList()">
                     <option value="">Apparaat</option>
-                    <option ng-repeat="actuator in rec.actuators" value="{{actuator.id}}">{{actuator.config.alias}}</option>
+                    <option ng-repeat="actuator in rec.actuators" value="{{actuator.id}}">{{actuator.config.alias}}
+                    </option>
                 </select>
             </div>
             <div class="col m3" style="margin-top:15px;">
                 <select ng-model="rec.event.event" style="display: block;">
                     <option value="">Veld</option>
-                    <option ng-repeat="(key, val) in rec.getActuatorById(rec.event.device).model.events" value="{{val}}">
+                    <option ng-repeat="(key, val) in rec.getActuatorById(rec.event.device).model.events"
+                            value="{{val}}">
                         {{val}}
                     </option>
                 </select>
@@ -219,18 +245,29 @@
 
     </div>
     <div class="modal-footer">
-        <a ng-click="rec.closeModal('ruleModal'); rec.addToThresholds()" class="modal-action modal-close waves-effect waves-green btn-flat ">Bewaren</a>
+        <div class="row">
+            <div class="col m3">
+                <a ng-if="rec.event.name" ng-click="rec.remove('events', rec.event.id, 'eventModal')"
+                   class="modal-action modal-close waves-effect waves-green btn-flat ">Verwijderen</a>
+
+                <div style="width: 10px; height: 5px;"></div>
+            </div>
+            <div class="col m3 offset-m6">
+                <a ng-click="rec.closeModal('timerModal'); rec.addToThresholds()"
+                   class="modal-action modal-close waves-effect waves-green btn-flat ">Bewaren</a>
+            </div>
+        </div>
     </div>
 </div>
 
 
-<div id="timerModal" class="modal modal-fixed-footer"  style="height: 200px;">
+<div id="timerModal" class="modal modal-fixed-footer" style="height: 200px;">
     <div class="modal-content">
         <h4>Tijdklok - {{rec.actuator.config.alias}} {{rec.selectedCommand}}</h4>
 
         <div class="row">
             <div class="input-field col m6">
-                <input edit-dir type="text" style="display:block;" id="timerName" ng-model="rec.event.name">
+                <input edit-dir type="text" style="display:block;" id="timerName" ng-model="rec.timer.name">
                 <label for="timerName">Naam</label>
             </div>
             <div class="input-field col m6">
@@ -241,6 +278,17 @@
 
     </div>
     <div class="modal-footer">
-        <a ng-click="rec.closeModal('ruleModal'); rec.addToThresholds()" class="modal-action modal-close waves-effect waves-green btn-flat ">Bewaren</a>
+        <div class="row">
+            <div class="col m3">
+                <a ng-if="rec.timer.time" ng-click="rec.remove('timers', rec.timer.id, 'timerModal')"
+                   class="modal-action modal-close waves-effect waves-green btn-flat ">Verwijderen</a>
+
+                <div style="width: 10px; height: 5px;"></div>
+            </div>
+            <div class="col m3 offset-m6">
+                <a ng-click="rec.closeModal('timerModal'); rec.addToThresholds()"
+                   class="modal-action modal-close waves-effect waves-green btn-flat ">Bewaren</a>
+            </div>
+        </div>
     </div>
 </div>
