Toggle status werkt nu ook:D

--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -35,8 +35,8 @@
                 </option>
             </select>
         </div>
-        <div class="customCard col m4 offset-m1" style="padding:1px; background-color:lightgrey">
-            <div style="text-align: center; margin-top: 3px;" ng-click="snc.removeActuator(actuator.id)">Verwijder</div>
+        <div class="customCard col m4 offset-m1" style="padding:1px; background-color:#A13A2D" ng-click="snc.removeActuator(actuator.id)">
+            <div style="text-align: center; margin-top: 3px;" >Verwijder</div>
         </div>
     </div>
 </div>
