--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -36,8 +36,8 @@
                 </option>
             </select>
         </div>
-        <div class="customCard offset-m1 col m3" style="padding:1px; background-color:lightgrey">
-            <div style="text-align: center; margin-top: 3px;" ng-click="sdc.removeActuator(actuator.id)">Verwijder</div>
+        <div class="customCard col m4 offset-m1" style="padding:1px; background-color:#A13A2D" ng-click="sdc.removeActuator(actuator.id)">
+            <div style="text-align: center; margin-top: 3px;" >Verwijder</div>
         </div>
     </div>
 </div>
