--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -31,7 +31,10 @@
         </div>
         <div class="col m5">
             <select id="{{actuator.id}}" style="display: block;">
-                <option ng-repeat="command in actuator.model.commands" ng-click="sdc.updateActuator(actuator.id)" ng-selected="sdc.scenario.actuators[sdc.devices.indexOf(actuator)].action.command === command.name" data-value="{{ {deviceid: actuator.id, command: command} }}">
+                <option ng-repeat="command in actuator.model.commands"
+                        ng-if="sdc.isAllowedCommand(command.name)"
+                        ng-click="sdc.updateActuator(actuator.id)" ng-selected="sdc.scenario.actuators[sdc.devices.indexOf(actuator)].action.command === command.name"
+                        data-value="{{ {deviceid: actuator.id, command: command} }}">
                     {{command.name}}
                 </option>
             </select>
