niks werd, succes wijnand

--- a/public/components/scenario/scenario.overzicht.html
+++ b/public/components/scenario/scenario.overzicht.html
@@ -18,12 +18,12 @@
                             <div style=" margin:0 auto; margin-top:6px; width: 36px; height:36px; background-size:cover;"></div>
                         </div>
                     </div>
-                    <div class="col m8" ng-click="scena.goToDetail(scenario.scenario)"
+                    <div class="col m8" ng-click="scena.goToDetail(scenario)"
                          style="margin-left:-8px; margin-top:0px;">
                         <div class="customCard" style="padding:1px;">
                             <div class="detailcontainer">
-                                {{scenario.scenario.name}}<br>
-                                <span class="description">{{scenario.scenario.description.substring(0, 25)}}...</span>
+                                {{scenario.name}}<br>
+                                <span class="description">{{scenario.description.substring(0, 25)}}...</span>
                             </div>
                         </div>
                     </div>
