--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -30,13 +30,27 @@
             <span class="col m3">{{actuator.config.alias}}</span>
         </div>
         <div class="col m5">
-            <select id="{{actuator.id}}" style="display: block;">
-                <option ng-repeat="command in actuator.model.commands"
-                        ng-if="sdc.isAllowedCommand(command.name)"
-                        ng-click="sdc.updateActuator(actuator.id)" ng-selected="sdc.scenario.actuators[sdc.devices.indexOf(actuator)].action.command === command.name"
-                        data-value="{{ {deviceid: actuator.id, command: command} }}">
-                    {{command.name}}
-                </option>
+            <!--<select id="{{actuator.id}}" ng-model="selected" ng-change="sdc.updateActuator(actuator.id)">-->
+            <select ng-model="selected"
+                    ng-options="command as command.name for command in actuator.model.commands"
+                    ng-init="selected = sdc.selectedAction(selected, actuator)"
+                    ng-change="sdc.updateActuator(selected, actuator.id)"
+                    id="{{actuator.id}}"
+                    style="display: block;">
+                <!--<option value="{{command.name}}">-->
+                    <!--{{command.name}}-->
+                <!--</option>-->
+            <!--<select id="{{actuator.id}}" style="display: block;">-->
+                <!--<option ng-repeat="command in actuator.model.commands"-->
+                        <!--data-value="{{ {deviceid: actuator.id, command: command} }}">-->
+                    <!--{{command.name}}-->
+                <!--</option>-->
+                <!--<option ng-repeat="command in actuator.model.commands"-->
+                        <!--ng-if="sdc.isAllowedCommand(command.name)"-->
+                        <!--ng-click="sdc.updateActuator(actuator.id)" ng-selected="sdc.scenario.actuators[sdc.devices.indexOf(actuator)].action.command === command.name"-->
+                        <!--data-value="{{ {deviceid: actuator.id, command: command} }}">-->
+                    <!--{{command.name}}-->
+                <!--</option>-->
             </select>
         </div>
         <div class="customCard col m4 offset-m1" style="padding:1px; background-color:#A13A2D" ng-click="sdc.removeActuator(actuator.id)">
