--- a/public/components/scenario/scenario.new.html
+++ b/public/components/scenario/scenario.new.html
@@ -1,41 +1,80 @@
-<div class="col m12">
-    <div class="row detaildescrip" style="margin-top:8px;">
-        <div class="col m10">
-            <label class="col m3" style="margin-top: 10px" for="name">Naam</label>
-            <input class="col m9" type="text" edit-dir="" id="name" placeholder="Druk hier om de naam aan te passen"
-                   ng-model="snc.scenario.name"/>
+<div class="col m12" style="margin-top:15px; padding:0px;">
+    <div class="row" style="padding:0px; ">
+        <div class="col m2">
+            <div class="card touch waves-light text-center" style="height: 75px; padding-top:8px;">
+                <div class="statusscenario" ng-class="scenario.status ? 'green' : 'red' "></div>
+            </div>
+            <div ng-click="adc.GoToDetail(adc.actuator)" class="card text-center touch waves-light" style="padding:5px; margin-top:-12px;">
+                <img src="images/icon_condition.png" width="25px;">
+            </div>
         </div>
-        <div class="customCard col m2" style="padding:1px; background-color:lightgrey">
-            <div style="text-align: center; margin-top: 13px;" ng-click="snc.create()">Opslaan</div>
+        <div class="col m9">
+            <input type="text" edit-dir id="name" placeholder="Naam" ng-model="snc.scenario.name"
+                   />
+
+            <input type="text" edit-dir placeholder="Omschrijving..." id="description" ng-model="snc.scenario.description"
+                   style="margin-top:-10px; margin-bottom:0;">
         </div>
-        <div class="col m10">
-            <label class="col m3" style="margin-top: 10px" for="description">Omschrijving</label>
-            <input class="col m9" type="text" edit-dir="" id="description"
-                   placeholder="Druk hier om de omschrijving aan te passen"
-                   ng-model="snc.scenario.description"/>
+        <div class="col m1" style="margin-left:-5px;">
+            <div class="card touch" ng-click="snc.addActuator()" style="width: 40px; height: 40px; padding:5px; text-align:center;">
+                <img src="/images/icon_adddevice.png" width="100%;">
+            </div>
         </div>
-        <div class="customCard col m2" style="padding:1px; background-color:lightgrey">
-            <div style="text-align: center; margin-top: 3px;" ng-click="snc.addActuator()">Actuator toevoegen</div>
+        <div class="col m1" style="margin-left:-5px;">
+            <div class="card touch" ng-click="snc.create()" style="width: 40px; height: 40px; padding:5px; text-align:center;">
+                <img src="/images/icon_save.png" width="100%;">
+            </div>
         </div>
     </div>
 </div>
 
-<div style="overflow-y: scroll; height: 200px; width:100%;">
+
+<!--<div class="col m12">-->
+<!--<div class="row detaildescrip" style="margin-top:8px;">-->
+<!--<div class="col m10">-->
+<!--<label class="col m3" style="margin-top: 10px" for="name">Naam</label>-->
+<!--<input type="text" edit-dir="" id="name" placeholder="Scenarionaam" ng-model="sdc.scenarioName"-->
+<!--ng-change="sdc.updatename(sdc.uid, sdc.scenarioName)" style="margin-top:-10px;margin-bottom:0;"/>-->
+<!--</div>-->
+<!--<div class="card col m2" style="padding:1px; background-color:lightgrey">-->
+<!--<div style="text-align: center; margin-top: 3px;" ng-click="sdc.delete(sdc.scenario)">Scenario verwijderen-->
+<!--</div>-->
+<!--</div>-->
+<!--<div class="col m10">-->
+<!--<label class="col m3" style="margin-top: 10px" for="description">Omschrijving</label>-->
+<!--<input type="text" edit-dir="" placeholder="" id="description" ng-model="sdc.scenarioDescription"-->
+<!--ng-change="sdc.updateDescription(sdc.uid, sdc.scenarioDescription)"-->
+<!--style="margin-top:-10px; margin-bottom:0;">-->
+<!--</div>-->
+<!--<div class="card col m2" style="padding:1px; background-color:lightgrey">-->
+<!--<div style="text-align: center; margin-top: 3px;" ng-click="sdc.addActuator()">Actuator toevoegen</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+
+<div style="overflow-y: scroll; height: 180px; width:575px; top:210px; position: absolute;">
     <div class="row"
-         style="padding-top:5px; height: 57px; margin-bottom: 8px; margin-top:8px; border-bottom:1px solid #EEEEEE"
+         style="padding-top:5px; height: 57px; border-bottom:1px solid #EEEEEE"
          ng-repeat="actuator in snc.devices">
+        <div class="col m1">
+            <img src="{{actuator.model.image}}" width="100%">
+        </div>
         <div class="col m3">
             <span class="col m3">{{actuator.config.alias}}</span>
         </div>
         <div class="col m5">
             <select id="{{actuator.id}}" style="display: block;">
-                <option ng-repeat="command in actuator.model.commands" ng-if="snc.isAllowedCommand(command.name)"
-                        data-value="{{ {deviceid: actuator.id, command: command} }}">{{command.name}}
+                <option ng-repeat="(key, command) in actuator.model.commands"
+                        ng-if="snc.isAllowedCommand(key)"
+                        ng-click="snc.updateActuator(actuator.id)" ng-selected="snc.scenario.actuators[snc.devices.indexOf(actuator)].action.command === key"
+                        data-value="{{ {deviceid: actuator.id, command: key} }}">
+                    {{command.name}}
                 </option>
             </select>
         </div>
-        <div class="customCard col m4 offset-m1" style="padding:1px; background-color:#A13A2D" ng-click="snc.removeActuator(actuator.id)">
-            <div style="text-align: center; margin-top: 3px;" >Verwijder</div>
+        <div class="customCard col m1 offset-m2" style="padding:1px; background-color:#F84E19" ng-click="snc.removeActuator(actuator.id)">
+            <div style="text-align: center; margin-top: 3px; padding-top:8px; color:white;" >X</div>
         </div>
     </div>
 </div>
