--- a/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
+++ b/public/components/ruleEngineScenarios/ruleEngineScenarios.detail.html
@@ -6,7 +6,7 @@
         <p>Scenario: {{rec.scenario.name}}</p>
     </div>
     <div class="col m2">
-        <select ng-model="rec.selectedCommand" style="display:block;">
+        <select ng-model="rec.selectedCommand" ng-change="rec.recalculateGroups(rec.scenario.rules[rec.selectedCommand].andgroups)" style="display:block;">
             <option value="start">Start</option>
             <option value="finish">Finish</option>
         </select>
@@ -31,35 +31,31 @@
                 <div style="margin-top:5px; background-image:url('http://simpleicon.com/wp-content/uploads/clock-time-1.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
             </div>
         </div>
+        <div class="row" style="margin-bottom: 0px;">
+            <div class="col m12 card touch" style="width:40px; padding-left:7px; background-color: #00C853;"
+                 ng-click="rec.saveAll()">
+                <div style="margin-top:5px; background-image:url('https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/128/save.png'); width: 25px; height:30px;  background-repeat:no-repeat; background-size:contain;"></div>
+            </div>
+        </div>
     </div>
     <div class="col m11" style="padding-left:0px; margin-top:5px;">
-        <div class="row">
+        <div class="row" style="padding-left: 11px;">
             <div class="col m12" style="padding-left:0px;">
-                <div ng-repeat="rule in rec.scenario.rules[rec.selectedCommand].thresholds track by $index" class="col m6">
-                    <div ng-click="rec.showDetail(rule)" class="touch card" style="padding:5px; height: 25px;">
-                        {{rule.name}}
-                        <div style="position: absolute; right:0px; width: 25px; height: 26px; padding-top:2px; margin-top:-27px; text-align: center; background-color: #F84E19">
-                            <img src="images/icon_condition.png" class="invert" width="80%">
-                        </div>
-                    </div>
-                </div>
+                <div ng-repeat="group in rec.currentGroups" class="col m6" style="padding-left: 10px;padding-right: 10px;">
+                    <div class="row">
+                        <div class="col m12 recgroup" style="border: 1px solid black;" data-groupindex="{{$index}}">
+                            <div class="row">
 
-                <div ng-repeat="rule in rec.scenario.rules[rec.selectedCommand].events track by $index" class="col m6">
-                    <div ng-click="rec.showDetailEvent(rule)" class="touch card" style="padding:5px; height: 25px;">
-                        {{rec.getActuatorById(rule.device).config.alias}} - {{rule.event}}
-                        <div style="position: absolute; right:0px; width: 25px; height: 26px; margin-top:-27px; text-align: center; padding-top:2px; background-color: #F84E19">
-                            <img src="https://cdn3.iconfinder.com/data/icons/time/100/alarm_bell_1-512.png"
-                                 class="invert" width="80%">
-                        </div>
-                    </div>
-                </div>
+                                <div ng-click="rec.showDetail(rule)" ng-repeat="rule in rec.currentGroups[$index]" class="col m12 recgrouprule" data-groupindex="{{$parent.$index}}" data-ownindex="{{$index}}">
+                                    <div class="touch card" style="padding:5px; height: 25px;">
+                                        {{rule.name}}
+                                        <div style="position: absolute; right:0px; width: 25px; height: 26px; padding-top:2px; margin-top:-27px; text-align: center; background-color: #F84E19">
+                                            <img ng-src="{{rec.getRuleIcon(rule)}}" class="invert" width="80%">
+                                        </div>
+                                    </div>
+                                </div>
 
-                <div ng-repeat="rule in rec.scenario.rules[rec.selectedCommand].timers track by $index" class="col m6">
-                    <div ng-click="rec.showDetailTimer(rule)" class="touch card" style="padding:5px; height: 25px;">
-                        {{rule.name}} - {{rule.time}}
-                        <div style="position: absolute; right:0px; width: 25px; height: 26px; margin-top:-27px; text-align: center; padding-top:2px; background-color: #F84E19">
-                            <img src="http://simpleicon.com/wp-content/uploads/clock-time-1.png" class="invert"
-                                 width="80%">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -162,8 +158,7 @@
 
         <div class="row">
             <div class="input-field col m12">
-                <input type="text" style="display:block;" id="ruleName" ng-model="rec.threshold.name">
-                <label for="ruleName">Naam</label>
+                <input type="text" style="display:block;" id="ruleName" edit-dir="" placeholder="Naam" ng-model="rec.threshold.name">
             </div>
         </div>
 
@@ -215,15 +210,13 @@
     </div>
 </div>
 
-
 <div id="eventModal" class="modal modal-fixed-footer" style="height: 200px;">
     <div class="modal-content">
         <h4>Trigger - {{rec.scenario.name}} {{rec.selectedCommand}}</h4>
 
         <div class="row">
             <div class="input-field col m6">
-                <input type="text" style="display:block;" id="eventName" ng-model="rec.event.name">
-                <label for="eventName">Naam</label>
+                <input type="text" style="display:block;" id="eventName" edit-dir="" placeholder="Naam" ng-model="rec.event.name">
             </div>
             <div class="col m3" style="margin-top:15px;">
                 <select ng-model="rec.event.device" style="display: block;" ng-change="rec.updateEventList()">
@@ -260,15 +253,13 @@
     </div>
 </div>
 
-
 <div id="timerModal" class="modal modal-fixed-footer" style="height: 200px;">
     <div class="modal-content">
         <h4>Tijdklok - {{rec.scenario.name}} {{rec.selectedCommand}}</h4>
 
         <div class="row">
             <div class="input-field col m6">
-                <input edit-dir type="text" style="display:block;" id="timerName" ng-model="rec.timer.name">
-                <label for="timerName">Naam</label>
+                <input edit-dir type="text" style="display:block;" id="timerName" placeholder="Naam" edit-dir="" ng-model="rec.timer.name">
             </div>
             <div class="input-field col m6">
                 <input type="text" id="timepicker" ng-model="rec.timer.time">
