--- a/public/components/scenario/scenario.overzicht.html
+++ b/public/components/scenario/scenario.overzicht.html
@@ -35,7 +35,7 @@
 
 <div class="col m6 offset-m6" ng-click="scena.goToNew()" style="text-align:center">
     <div class="col m12" style="margin-left:-8px; margin-top:0px; margin-right:-10px;">
-        <div class="customCard" style="padding:1px; background-color:lightgrey">
+        <div id="newscenario" class="customCard" style="padding:1px; background-color:lightgrey">
             <p style="margin-top:10px;">Nieuw Scenario</p>
         </div>
     </div>
