--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -43,14 +43,17 @@
             <span class="col m3">{{actuator.config.alias}}</span>
         </div>
         <div class="col m5">
-            <select ng-model="sdc.selected"
-                    ng-options="command as command.name for command in actuator.model.commands"
-                    ng-init="selected = sdc.selectedAction(selected, actuator)"
-                    ng-change="sdc.updateActuator(selected, actuator.id)"
-                    id="{{actuator.id}}"
-                    value="sdc.scenario.actuators[$index].command"
+            <select id="{{actuator.id}}"
+                    ng-model="selected"
+                    ng-change="sdc.updateActuator(actuator.id)"
                     style="display: block;">
-      sdc.selected      </select>
+                <option ng-repeat="(key, command) in actuator.model.commands"
+                        ng-if="sdc.isAllowedCommand(key)"
+                        ng-selected="sdc.selectedAction(key, actuator)"
+                        value="{{key}}">
+                    {{command.name}}
+                </option>
+            </select>
         </div>
         <div class="customCard col m1 offset-m2" style="padding:1px; background-color:#F84E19" ng-click="sdc.removeActuator(actuator.id)">
             <div style="text-align: center; margin-top: 3px; padding-top:8px; color:white;" >X</div>
