--- a/public/components/actuator/actuator.overzicht.html
+++ b/public/components/actuator/actuator.overzicht.html
@@ -24,7 +24,7 @@
                     <div class="col m8" ng-click="aoc.GoToDetail(actuator)"
                          style="margin-left:-8px; margin-top:0px;">
                         <div class="customCard" style="padding:1px;">
-                            <div class="detailcontainer">
+                            <div id="actuator" class="detailcontainer">
                                 {{actuator.config.alias}}<br>
                                 <span class="description">{{actuator.model.description.substring(0, 25)}}...</span>
                             </div>
