E2Etest scenario beheren done

--- a/public/components/scenario/scenario.detail.html
+++ b/public/components/scenario/scenario.detail.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="col m1" style="margin-left:-5px;">
-            <div class="card touch" ng-click="sdc.delete(sdc.scenario)" style="width: 40px; height: 40px; padding:5px; text-align:center;">
+            <div id="trashcan" class="card touch" ng-click="sdc.delete(sdc.scenario)" style="width: 40px; height: 40px; padding:5px; text-align:center;">
                 <img src="/images/icon_trash.png" width="100%;">
             </div>
         </div>
