E2Etest scenario uitvoeren done

--- a/public/components/menu/menu.html
+++ b/public/components/menu/menu.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col m12 text-center">
                 <img src="/images/icon_apparaten{{mc.active=='actuators' ? '_active' : ''}}.png" class="grayscale" width="70%"><br>
-                <span>Apparaten</span>
+                <span id="devices">Apparaten</span>
             </div>
         </div>
     </div>
