--- a/public/components/scenario/scenario.overzicht.html
+++ b/public/components/scenario/scenario.overzicht.html
@@ -14,7 +14,7 @@
                 <div class="row" style="margin-bottom:10px">
                     <div class="col m4">
                         <div ng-click="scena.toggleState(scenario)" class="customCard onoff text-center">
-                            <div class="statusscenario" ng-class="scenario.status ? 'green' : 'red' "></div>
+                            <div id="status" class="statusscenario" ng-class="scenario.status ? 'green' : 'red' "></div>
                             <div style=" margin:0 auto; margin-top:6px; width: 36px; height:36px; background-size:cover;"></div>
                         </div>
                     </div>
