--- a/public/components/actuator/actuator.detail.html
+++ b/public/components/actuator/actuator.detail.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col m12">
                 <div class="command nopad valign-wrapper card" ng-repeat="(key, command) in adc.actuator.model.commands" ng-if="command.name != 'status'">
-                    <div class="actuatorCommand" id='{{key}}' ng-click="adc.showCommand(adc.actuator.model.id, command, key, 'actuator');" class="touch valign" style="display: inline-block; width: 85%;">{{command.name}}</div>
+                    <div class="actuatorCommand" id='{{key}}' ng-click="adc.showCommand(adc.actuator.model.id, command, key, 'actuator');" class="touch valign" style="display: inline-block; padding-left:5px; width: 85%;">{{command.name}}</div>
                     <div data-position="top" data-delay="50" data-tooltip="{{command.description}}" class="tooltipped text-center" style="display: inline-block; width:15%; background-color:#F84E19; color:white; font-size:24px;">i</div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
     <div class="modal-content">
         <h4 id="commandTitle">{{adc.currentcommand.name}}</h4>
         <div class="modalWrapper">
-            <div class="command">
+            <div class="command" >
                 <div class="parameters" ng-repeat="(paramkey, param) in adc.currentcommand.parameters">
                     <div ng-if="adc.checkInputType(param.accepts[0], 'slider')">
                         <rzslider rz-slider-model="adc.currentvalues[paramkey]" rz-slider-options="{floor: param.accepts[0].limit[0].min, ceil: param.accepts[0].limit[0].max}"></rzslider>
