--- a/public/components/sensor/sensor.detail.html
+++ b/public/components/sensor/sensor.detail.html
@@ -23,7 +23,7 @@
 
 <div style="clear :both;"></div>
 
-<div class="row">
+<div class="row" style="margin-top:72px;">
     <div class="col m5 nopad">
         <div class="row">
             <div class="col m12">
@@ -34,7 +34,7 @@
             </div>
         </div>
     </div>
-    <div class="col m7 nopad" style="margin-top:-40px;">
+    <div class="col m7 nopad" style="z-index:-1;">
         <canvas id="line" class="chart chart-line" chart-options="sdc.chartoptions"  chart-data="sdc.data"
               chart-labels="sdc.labels" chart-legend="false" chart-series="sdc.series"
               chart-click="sdc.onChartClick" width='280px' height='175px'>
